--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^22.15.3",
     "@vitejs/plugin-vue": "^5.2.2",
     "@vue/tsconfig": "^0.7.0",
@@ -24,7 +25,7 @@
     "eslint": "^9.25.1",
     "eslint-plugin-vue": "^10.0.0",
     "npm-run-all2": "^7.0.2",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.39",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
