--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
