--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "vue": "^3.5.13",
     "vue-router": "^4.3.3"
   },
